# MasterChess

./: CMakeLists.txt  README.md  Source.cpp
Arduino/: ArduinoChessBoard.cpp  ArduinoChessBoard.hpp  ArduinoExported.hpp  CMakeLists.txt  Matrix8x8.hpp  SerialPort.hpp  Serialization.hpp  Serialization.inl
MasterChess/: CMakeLists.txt  ChessGame.cpp  ChessGame.hpp  ChessPlayer.cpp  ChessPlayer.hpp  Game.cpp  Game.hpp  IConsole.hpp  IGameListener.hpp  IInput.hpp  IPlayer.hpp
MasterChess/ChessPieces/: King.hpp
MasterChess/Inputs/: StockfishInput.cpp  StockfishInput.hpp
MasterChess/Listeners/: ConsoleChessGameListener.cpp  ConsoleChessGameListener.hpp  GameBroadcastListener.cpp  GameBroadcastListener.hpp
Unity/: CMakeLists.txt  UnityGameListener.cpp  UnityGameListener.hpp  UnityRpc.proto
Windows/: CMakeLists.txt  Console.cpp
